<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logoimage"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:duplicateParentState="false"
            android:src="@drawable/logofreelap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="80dp"
        android:background="@anim/background_layout_login"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtwelcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:ems="10"
            android:text="@string/textwelcom"
            android:textColor="@color/whilecol"
            android:textSize="@dimen/textwelcomlogin" />

        <EditText
            android:id="@+id/editTxtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="@anim/editextlogin"
            android:ems="10"
            android:hint="@string/Login"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTxtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="@anim/editextlogin"
            android:ems="10"
            android:hint="@string/Motdepasse"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtforgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textColor="@color/text_color_recover"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@anim/btn_login"
                android:textColor="@color/button_color"
                android:minHeight="35dip"
                android:text="@string/Loginbtn" />

            <Button
                android:id="@+id/btncreatcompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:textColor="@color/button_color"
                android:background="@anim/btn_login"
                android:minHeight="35dip"
                android:text="@string/Newcompte" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/pbr_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:gravity="center"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="10dip"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="430dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/appname" />
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/about" />
        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/privacy" />
        <TextView
            android:id="@+id/contactus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/contactus" />
    </LinearLayout>




</RelativeLayout>